# FTP-File-Sender

./: .gitignore  README.md  ftp_file_sender.cmd  ftp_file_sender.sh  pyproject.toml  requirements.txt
devscripts/: test.py
ftp_file_sender/: __init__.py  __main__.py
ftp_file_sender/utils/: logger.py
